<?xml version="1.0"?>
<package format="2">
  <name>rgbd_svo</name>
  <version>0.1.0</version>
  <description>An adaptation of semi-direct visual odometery (SVO) for RGB-D cameras</description>

  <maintainer email="danielpkoch@gmail.com">Daniel Koch</maintainer>
  <author email="danielpkoch@gmail.com">Daniel Koch</author>

  <license>BSD-3</license>

  <url type="website">http://wiki.ros.org/rgbd_svo</url>
  <url type="repository">https://github.com/dpkoch/rgbd_svo</url>
  <url type="bugtracker">https://github.com/dpkoch/rgbd_svo/issues</url>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>relative_nav</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>relative_nav</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend> -->

  <doc_depend>doxygen</doc_depend>

</package>
